--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,67 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+#Ignore .kcp directory
+.kcp/
+
+#Ignore temporal directoryo
+tmp/
 
 # Ignore bin directory contents
 bin/*
+
+# Keep the bin directory
+!bin/.gitkeep
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
+
+# Crash log files
+crash.log
+
+# Exclude all .tfvars files, which are likely to contain sentitive data, such as
+# password, private keys, and other secrets. These should not be part of version
+# control as they are data points which are potentially sensitive and subject
+# to change depending on the environment.
+#
+*.tfvars
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# Include override files you do wish to add to version control using negated pattern
+#
+# !example_override.tf
+
+# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
+# example: *tfplan*
+
+# Ignore CLI configuration files
+.terraformrc
+terraform.rc
+
+# Ignore vscode logs
+.vscode/*.log
+
+# Ignore goland files
+.idea
+
+.env
+
+demo
+
+config/deploy/local/**/*.kubeconfig
+config/deploy/local/**/*.env
+config/deploy/**/_*
+
+*__
