--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -6,7 +6,7 @@ metadata:
   name: manager-role
 rules:
 - resources:
-  - secrets
+  - secret
   verbs:
   - create
   - delete
@@ -16,11 +16,11 @@ rules:
   - update
   - watch
 - resources:
-  - secrets/finalizers
+  - secret/finalizers
   verbs:
   - update
 - resources:
-  - secrets/status
+  - secret/status
   verbs:
   - get
   - patch
