Update ingress nginx config
Disable the publish service feature which prevents the
`reportNodeInternalIp` option working in local development. Without this
option the internal cluster ip is used in the lb status preventing it
being accessible outside of the cluster from the host.

--- a/config/ingress-nginx/kustomization.yaml
+++ b/config/ingress-nginx/kustomization.yaml
@@ -18,6 +18,8 @@ helmCharts:
         hostNetwork: true
         ingressClassResource:
           default: true
+        publishService:
+          enabled: false
         reportNodeInternalIp: true
         service:
           type: NodePort
