--- a/config/crd/bases/kuadrant.io_dnsrecords.yaml
+++ b/config/crd/bases/kuadrant.io_dnsrecords.yaml
@@ -15,7 +15,20 @@ spec:
     singular: dnsrecord
   scope: Namespaced
   versions:
-  - name: v1
+  - additionalPrinterColumns:
+    - description: Managed Zone assigned to this record.
+      jsonPath: .status.managedZone.name
+      name: MZ Name
+      type: string
+    - description: Managed Zone namespace.
+      jsonPath: .status.managedZone.namespace
+      name: MZ Namespace
+      type: string
+    - description: DNSRecord ready.
+      jsonPath: .status.conditions[?(@.type=="Ready")].status
+      name: Ready
+      type: string
+    name: v1
     schema:
       openAPIV3Schema:
         description: DNSRecord is the Schema for the dnsrecords API
@@ -85,6 +98,103 @@ spec:
           status:
             description: DNSRecordStatus defines the observed state of DNSRecord
             properties:
+              conditions:
+                description: "conditions are any conditions associated with the record
+                  in the managed zone. \n If publishing the record fails, the \"Failed\"
+                  condition will be set with a reason and message describing the cause
+                  of the failure."
+                items:
+                  description: DNSZoneCondition is just the standard condition fields.
+                  properties:
+                    lastTransitionTime:
+                      format: date-time
+                      type: string
+                    message:
+                      type: string
+                    reason:
+                      type: string
+                    status:
+                      description: ConditionStatus represents a condition's status.
+                      enum:
+                      - "True"
+                      - "False"
+                      - Unknown
+                      type: string
+                    type:
+                      description: DNSRecordConditionType represents DNSRecord condition
+                        value.
+                      type: string
+                  required:
+                  - status
+                  - type
+                  type: object
+                type: array
+              endpoints:
+                description: "endpoints are the last endpoints that were successfully
+                  published by the provider \n Provides a simple mechanism to store
+                  the current provider records in order to delete any that are no
+                  longer present in DNSRecordSpec.Endpoints \n Note: This will not
+                  be required if/when we switch to using external-dns since when running
+                  with a \"sync\" policy it will clean up unused records automatically."
+                items:
+                  description: Endpoint is a high-level way of a connection between
+                    a service and an IP
+                  properties:
+                    dnsName:
+                      description: The hostname of the DNS record
+                      type: string
+                    labels:
+                      additionalProperties:
+                        type: string
+                      description: Labels stores labels defined for the Endpoint
+                      type: object
+                    providerSpecific:
+                      description: ProviderSpecific stores provider specific config
+                      items:
+                        description: ProviderSpecificProperty holds the name and value
+                          of a configuration which is specific to individual DNS providers
+                        properties:
+                          name:
+                            type: string
+                          value:
+                            type: string
+                        type: object
+                      type: array
+                    recordTTL:
+                      description: TTL for the record
+                      format: int64
+                      type: integer
+                    recordType:
+                      description: RecordType type of record, e.g. CNAME, A, SRV,
+                        TXT etc
+                      type: string
+                    setIdentifier:
+                      description: Identifier to distinguish multiple records with
+                        the same name and type (e.g. Route53 records with routing
+                        policies other than 'simple')
+                      type: string
+                    targets:
+                      description: The targets the DNS record points to
+                      items:
+                        type: string
+                      type: array
+                  type: object
+                type: array
+              managedZone:
+                description: Reference to the managed zone that this record is being
+                  published to.
+                properties:
+                  name:
+                    description: '`name` is the name of the service. Required'
+                    type: string
+                  namespace:
+                    description: '`namespace` is the namespace of the managed zone
+                      Required'
+                    type: string
+                required:
+                - name
+                - namespace
+                type: object
               observedGeneration:
                 description: observedGeneration is the most recently observed generation
                   of the DNSRecord.  When the DNSRecord is updated, the controller
@@ -94,117 +204,6 @@ spec:
                   it needs to retry the update for that specific zone.
                 format: int64
                 type: integer
-              zones:
-                description: zones are the status of the record in each zone.
-                items:
-                  description: DNSZoneStatus is the status of a record within a specific
-                    zone.
-                  properties:
-                    conditions:
-                      description: "conditions are any conditions associated with
-                        the record in the zone. \n If publishing the record fails,
-                        the \"Failed\" condition will be set with a reason and message
-                        describing the cause of the failure."
-                      items:
-                        description: DNSZoneCondition is just the standard condition
-                          fields.
-                        properties:
-                          lastTransitionTime:
-                            format: date-time
-                            type: string
-                          message:
-                            type: string
-                          reason:
-                            type: string
-                          status:
-                            minLength: 1
-                            type: string
-                          type:
-                            minLength: 1
-                            type: string
-                        required:
-                        - status
-                        - type
-                        type: object
-                      type: array
-                    dnsZone:
-                      description: dnsZone is the zone where the record is published.
-                      properties:
-                        id:
-                          description: "id is the identifier that can be used to find
-                            the DNS hosted zone. \n on AWS zone can be fetched using
-                            `ID` as id in [1] on Azure zone can be fetched using `ID`
-                            as a pre-determined name in [2], on GCP zone can be fetched
-                            using `ID` as a pre-determined name in [3]. \n [1]: https://docs.aws.amazon.com/cli/latest/reference/route53/get-hosted-zone.html#options
-                            [2]: https://docs.microsoft.com/en-us/cli/azure/network/dns/zone?view=azure-cli-latest#az-network-dns-zone-show
-                            [3]: https://cloud.google.com/dns/docs/reference/v1/managedZones/get"
-                          type: string
-                        tags:
-                          additionalProperties:
-                            type: string
-                          description: "tags can be used to query the DNS hosted zone.
-                            \n on AWS, resourcegroupstaggingapi [1] can be used to
-                            fetch a zone using `Tags` as tag-filters, \n [1]: https://docs.aws.amazon.com/cli/latest/reference/resourcegroupstaggingapi/get-resources.html#options"
-                          type: object
-                      type: object
-                    endpoints:
-                      description: "endpoints are the last endpoints that were successfully
-                        published to the provider \n Provides a simple mechanism to
-                        store the current provider records in order to delete any
-                        that are no longer present in DNSRecordSpec.Endpoints \n Note:
-                        This will not be required if/when we switch to using external-dns
-                        since when running with a \"sync\" policy it will clean up
-                        unused records automatically."
-                      items:
-                        description: Endpoint is a high-level way of a connection
-                          between a service and an IP
-                        properties:
-                          dnsName:
-                            description: The hostname of the DNS record
-                            type: string
-                          labels:
-                            additionalProperties:
-                              type: string
-                            description: Labels stores labels defined for the Endpoint
-                            type: object
-                          providerSpecific:
-                            description: ProviderSpecific stores provider specific
-                              config
-                            items:
-                              description: ProviderSpecificProperty holds the name
-                                and value of a configuration which is specific to
-                                individual DNS providers
-                              properties:
-                                name:
-                                  type: string
-                                value:
-                                  type: string
-                              type: object
-                            type: array
-                          recordTTL:
-                            description: TTL for the record
-                            format: int64
-                            type: integer
-                          recordType:
-                            description: RecordType type of record, e.g. CNAME, A,
-                              SRV, TXT etc
-                            type: string
-                          setIdentifier:
-                            description: Identifier to distinguish multiple records
-                              with the same name and type (e.g. Route53 records with
-                              routing policies other than 'simple')
-                            type: string
-                          targets:
-                            description: The targets the DNS record points to
-                            items:
-                              type: string
-                            type: array
-                        type: object
-                      type: array
-                  required:
-                  - dnsZone
-                  type: object
-                type: array
             type: object
         type: object
     served: true
