Updating ingress with dummy host name and adding extra logs

--- a/config/webhook/ingress.yaml
+++ b/config/webhook/ingress.yaml
@@ -6,7 +6,7 @@ metadata:
     mctc-component: webhook
 spec:
   rules:
-    - host: ""
+    - host: "webhooks.mctc.io"
       http:
         paths:
           - path: /
