--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -81,3 +81,13 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - networking.k8s.io
+  resources:
+  - ingresses
+  verbs:
+  - get
+  - list
+  - patch
+  - update
+  - watch
