--- a/config/webhook-setup/control/ingress.yaml
+++ b/config/webhook-setup/control/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: ingress-mctc
+  name: ingress
   annotations:
     mctc-component: webhook
 spec:
