--- a/config/gateway-api/kustomization.yaml
+++ b/config/gateway-api/kustomization.yaml
@@ -1,2 +1,5 @@
-bases:
-  - github.com/kubernetes-sigs/gateway-api/blob/v0.6.0/config/crd
+resources:
+- crd/standard/gateway.networking.k8s.io_gatewayclasses.yaml
+- crd/standard/gateway.networking.k8s.io_gateways.yaml
+- crd/standard/gateway.networking.k8s.io_httproutes.yaml
+# From https://github.com/kubernetes-sigs/gateway-api/blob/v0.6.0/config/crd/kustomization.yaml
