--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -121,3 +121,29 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - kuadrant.io
+  resources:
+  - managedzones
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - kuadrant.io
+  resources:
+  - managedzones/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - kuadrant.io
+  resources:
+  - managedzones/status
+  verbs:
+  - get
+  - patch
+  - update
