--- a/config/syncer/syncer.yaml
+++ b/config/syncer/syncer.yaml
@@ -1,8 +1,3 @@
-apiVersion: v1
-kind: Namespace
-metadata:
-  name: mctc-system
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,8 +10,6 @@ spec:
   replicas: 1
   template:
     metadata:
-      annotations:
-        kubectl.kubernetes.io/default-container: manager
       labels:
         control-plane: sync-agent
     spec:
@@ -24,13 +17,13 @@ spec:
         runAsNonRoot: true
       containers:
       - command:
-        - /agent
+        - /syncer
         args:
-        - -control-plane-config-namespace=argocd
-        - -control-plane-config-name=mctc-control-plane
-        image: agent:latest
+        - -control-plane-config-namespace=mctc-system
+        - -control-plane-config-name=control-plane-cluster-internal
+        image: syncer:latest
         imagePullPolicy: Never
-        name: agent
+        name: syncer
         securityContext:
           allowPrivilegeEscalation: false
           capabilities:
