removing old folder

--- a/config/webhook-setup/control/kustomization.yaml
+++ b/config/webhook-setup/control/kustomization.yaml
@@ -2,6 +2,7 @@ namespace: multi-cluster-traffic-controller-system
 
 resources:
   - ingress.yaml
+  - service.yaml
 
 secretGenerator:
 - name: ingress-tls
