--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -44,6 +44,13 @@ spec:
         args:
         - --leader-elect
         image: controller:latest
+        envFrom:
+          - secretRef:
+              name: aws-credentials
+              optional: true
+          - configMapRef:
+              name: controller-config
+              optional: true
         name: manager
         securityContext:
           allowPrivilegeEscalation: false
