Local setup and readme updates
Updtes to local setup and docs related to runninng the controller and
agent locally.

* Use tmp dir for temporary files
* Remove externaldns
* Remove samples/syncer (Same as echo-service and the secret should be
  created elsewhere as part of the agent deployment)
* Add clean make target (Removes all temp files and binaries creates
  from make commands and scripts)
* Add build make target (Builds both the controller and agent)
* Use Make as intended for file generation.

--- a/.gitignore
+++ b/.gitignore
@@ -81,6 +81,5 @@ config/deploy/**/_*
 
 *__
 
-aws-credentials.env
-controller-config.env
-hack/kubeconfigs/*.kubeconfig
+aws-credentials*.env
+controller-config*.env
