--- a/config/syncer/syncer.yaml
+++ b/config/syncer/syncer.yaml
@@ -22,6 +22,7 @@ spec:
         - -control-plane-config-namespace=mctc-system
         - -control-plane-config-name=control-plane-cluster-internal
         - -synced-resources=gateways.v1beta1.gateway.networking.k8s.io
+        - -synced-resources=secrets.v1
         image: syncer:latest
         imagePullPolicy: Never
         name: syncer
