Only generate certs for hosts that match an MZ and use HTTPS

--- a/config/samples/gateway.yaml
+++ b/config/samples/gateway.yaml
@@ -10,7 +10,7 @@ spec:
   - name: default
     port: 443
     protocol: HTTPS
-    hostname: "myapp.dm.dev.hcpapps.net"
+    hostname: "test.example.com"
     allowedRoutes:
       namespaces:
         from: All
