--- a/config/syncer/syncer.yaml
+++ b/config/syncer/syncer.yaml
@@ -23,6 +23,11 @@ spec:
         - -control-plane-config-name=control-plane-cluster-internal
         - -synced-resources=gateways.v1beta1.gateway.networking.k8s.io
         - -synced-resources=secrets.v1
+        env:
+          - name: DATAPLANE_NAMESPACE
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.namespace
         image: syncer:latest
         imagePullPolicy: Never
         name: syncer
