--- a/config/crd/bases/kuadrant.io_placements.yaml
+++ b/config/crd/bases/kuadrant.io_placements.yaml
@@ -110,41 +110,26 @@ spec:
                   type: object
                 type: array
               targetRef:
-                description: PolicyTargetReference identifies an API object to apply
-                  policy to. This should be used as part of Policy resources that
-                  can target Gateway API resources. For more information on how this
-                  policy attachment model works, and a sample Policy resource, refer
-                  to the policy attachment documentation for Gateway API.
                 properties:
                   group:
-                    description: Group is the group of the target resource.
-                    maxLength: 253
-                    pattern: ^$|^[a-z0-9]([-a-z0-9]*[a-z0-9])?(\.[a-z0-9]([-a-z0-9]*[a-z0-9])?)*$
-                    type: string
-                  kind:
-                    description: Kind is kind of the target resource.
-                    maxLength: 63
-                    minLength: 1
-                    pattern: ^[a-zA-Z]([-a-zA-Z0-9]*[a-zA-Z0-9])?$
+                    description: Group is the group of the target resource. e.g. 'gateway.networking.k8s.io'
                     type: string
                   name:
-                    description: Name is the name of the target resource.
-                    maxLength: 253
-                    minLength: 1
+                    description: Name is the name of the target resource. Must be
+                      in the same namespace as the Placement.
                     type: string
-                  namespace:
-                    description: Namespace is the namespace of the referent. When
-                      unspecified, the local namespace is inferred. Even when policy
-                      targets a resource in a different namespace, it MUST only apply
-                      to traffic originating from the same namespace as the policy.
-                    maxLength: 63
-                    minLength: 1
-                    pattern: ^[a-z0-9]([-a-z0-9]*[a-z0-9])?$
+                  resource:
+                    description: Resource is kind of the target resource. e.g. 'Gateway'
+                    type: string
+                  version:
+                    description: Version is the group of the target resource. e.g.
+                      'v1beta1'
                     type: string
                 required:
                 - group
-                - kind
                 - name
+                - resource
+                - version
                 type: object
             required:
             - targetRef
