Add RateLimitPolicy controller
Adds a RateLimitPolicy reconciler that will reconcile kuadrant
RateLimitPolicies to apply mctc sync and patch annotations based on the
RLPs target owner Gateway. If the target Gateway is using the wildcard
`all` sync annotation, a list of available clusters is queried, and
individual sync annotations added for each. A cluster specific
patch annotation is added for each cluster the RLP is being synced to
which adds an RLP configuration action using the cluster name as a key.
This will automatically be made available for use in the limits section
of the RLP allowing gateway admins to add cluster specific limits.

* Add kuadrant RateLimitPolicy CRD to control plane cluster.
* Add RateLimitPolicy controller and kuadrant-operator APIs as a dependency.
* Update sigs.k8s.io/gateway-api to v0.6.2.
* Add ratelimitpolicies.v1beta1.kuadrant.io to default syncer synced resources.
* Use gateway-api-v0.6.2 version of kuadrant
* Set gateway as owner of RLP.
* Add sync annotations based on target gateway sync annotations.
* Allow adding cluster attribues to RLP via annotations
`kuadrant.io/attribute-cloud=aws = (key: cloud, value: aws)`

--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -173,3 +173,29 @@ rules:
   - get
   - patch
   - update
+- apiGroups:
+  - kuadrant.io
+  resources:
+  - ratelimitpolicies
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - kuadrant.io
+  resources:
+  - ratelimitpolicies/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - kuadrant.io
+  resources:
+  - ratelimitpolicies/status
+  verbs:
+  - get
+  - patch
+  - update
