Fix downstream namespace after rebase

--- a/docs/milestone3/milestone3_application.yaml
+++ b/docs/milestone3/milestone3_application.yaml
@@ -52,7 +52,7 @@ spec:
   - group: gateway.networking.k8s.io
     kind: Gateway
     name: example-gateway
-    namespace: mctc-downstream
+    namespace: mctc-system
   rules:
   - backendRefs:
     - group: ""
