--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -98,6 +98,32 @@ rules:
 - apiGroups:
   - kuadrant.io
   resources:
+  - dnspolicies
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - kuadrant.io
+  resources:
+  - dnspolicies/finalizers
+  verbs:
+  - update
+- apiGroups:
+  - kuadrant.io
+  resources:
+  - dnspolicies/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - kuadrant.io
+  resources:
   - dnsrecords
   verbs:
   - create
