WIP OCM hub integration
remove default ns

Co-authored-by: David Martin <david-martin@users.noreply.github.com>

Co-authored-by: David Martin <david-martin@users.noreply.github.com>

Co-authored-by: David Martin <david-martin@users.noreply.github.com>

remove default ns

--- a/config/samples/gatewayclass.yaml
+++ b/config/samples/gatewayclass.yaml
@@ -7,5 +7,5 @@ spec:
   parametersRef:
     group: ""
     kind: "ConfigMap"
-    namespace: "multi-cluster-traffic-controller-system"
+    namespace: "multi-cluster-gateways"
     name: "gateway-params"
