--- a/config/default/kustomization.yaml
+++ b/config/default/kustomization.yaml
@@ -1,5 +1,5 @@
 # Adds namespace to all resources.
-namespace: multi-cluster-traffic-controller-system
+namespace: multi-cluster-gateways
 
 # Value of this field is prepended to the
 # names of all resources, e.g. a deployment named
