--- a/config/external-dns/kustomization.yaml
+++ b/config/external-dns/kustomization.yaml
@@ -7,7 +7,7 @@ helmCharts:
   - name: external-dns
     repo: https://charts.bitnami.com/bitnami
     version: 6.12.1
-    releaseName: mctc
+    releaseName: mgc
     namespace: external-dns
     valuesInline:
       provider: aws
@@ -21,4 +21,4 @@ helmCharts:
         create: true
       policy: sync
       registry: txt
-      txtPrefix: mctc-
+      txtPrefix: mgc-
