--- a/config/kuadrant-addon/hub/managedClusterAddon.yaml
+++ b/config/kuadrant-addon/hub/managedClusterAddon.yaml
@@ -2,12 +2,12 @@ apiVersion: addon.open-cluster-management.io/v1alpha1
 kind: ManagedClusterAddOn
 metadata:
  name: kuadrant-addon
- namespace: kind-mctc-workload-1
+ namespace: kind-mgc-workload-1
 spec:
  installNamespace: open-cluster-management-agent-addon
  configs:
   - resource: configmaps 
     name: install-config
-    namespace: kind-mctc-workload-1
+    namespace: kind-mgc-workload-1
  
  
