--- a/config/samples/echo_httproute.yaml
+++ b/config/samples/echo_httproute.yaml
@@ -44,7 +44,7 @@ spec:
   - group: gateway.networking.k8s.io
     kind: Gateway
     name: example-gateway
-    namespace: mctc-downstream
+    namespace: mgc-downstream
   rules:
   - backendRefs:
     - group: ""
