--- a/config/ingress-nginx/kustomization.yaml
+++ b/config/ingress-nginx/kustomization.yaml
@@ -9,7 +9,7 @@ helmCharts:
   - name: ingress-nginx
     repo: https://kubernetes.github.io/ingress-nginx
     version: 4.4.0
-    releaseName: mctc
+    releaseName: mgc
     namespace: ingress-nginx
     valuesInline:
       controller:
