--- a/config/samples/gateway.yaml
+++ b/config/samples/gateway.yaml
@@ -4,8 +4,8 @@ metadata:
   name: example-gateway
   annotations:
     kuadrant.io/gateway-cluster-label-selector: type=test
-    mctc-sync-agent/all: 'true'
-    mctc-syncer-patch/kind-mctc-workload-1: '[
+    mgc-sync-agent/all: 'true'
+    mgc-syncer-patch/kind-mgc-workload-1: '[
       {"op": "replace", "path": "/spec/gatewayClassName", "value": "boo"},
       {"op": "replace", "path": "/spec/listeners/0/name", "value": "test"}
     ]'
