--- a/docs/ratelimitpolicy/walkthrough/echo-application.yaml
+++ b/docs/ratelimitpolicy/walkthrough/echo-application.yaml
@@ -44,7 +44,7 @@ spec:
   - group: gateway.networking.k8s.io
     kind: Gateway
     name: example-gateway
-    namespace: mctc-downstream
+    namespace: mgc-downstream
   rules:
   - backendRefs:
     - group: ""
