--- a/docs/ratelimitpolicy/walkthrough/gatewayclass.yaml
+++ b/docs/ratelimitpolicy/walkthrough/gatewayclass.yaml
@@ -3,4 +3,4 @@ kind: GatewayClass
 metadata:
   name: kuadrant-multi-cluster-gateway-instance-per-cluster
 spec:
-  controllerName: "kuadrant.io/mctc-gw-controller"
+  controllerName: "kuadrant.io/mgc-gw-controller"
