--- a/samples/argocd-applicationset/echo-applicationset.yaml
+++ b/samples/argocd-applicationset/echo-applicationset.yaml
@@ -7,7 +7,7 @@ spec:
   generators:
     - list:
         elements:
-          - cluster: mctc-control-plane
+          - cluster: mgc-control-plane
             url: https://kubernetes.default.svc
   template:
     metadata:
