--- a/config/local-setup/controller/kustomization.yaml
+++ b/config/local-setup/controller/kustomization.yaml
@@ -18,6 +18,7 @@ secretGenerator:
   - name: aws-credentials
     envs:
       - ../../../aws-credentials.env
+    type: "kuadrant.io/aws"
 
 replacements:
   - source:
