Adding dns provider api resources and updating all controllers that require dns provider to initiate the dnsprovider during reconciliation instead of having it initiated in main.go

--- a/config/crd/bases/kuadrant.io_managedzones.yaml
+++ b/config/crd/bases/kuadrant.io_managedzones.yaml
@@ -46,6 +46,19 @@ spec:
               of an object. Servers should convert recognized schemas to the latest
               internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
             type: string
+          dnsprovider:
+            properties:
+              name:
+                type: string
+              namespace:
+                type: string
+              type:
+                type: string
+            required:
+            - name
+            - namespace
+            - type
+            type: object
           kind:
             description: 'Kind is a string value representing the REST resource this
               object represents. Servers may infer this from the endpoint the client
@@ -75,9 +88,23 @@ spec:
                 required:
                 - name
                 type: object
+              provider:
+                properties:
+                  name:
+                    type: string
+                  namespace:
+                    type: string
+                  type:
+                    type: string
+                required:
+                - name
+                - namespace
+                - type
+                type: object
             required:
             - description
             - domainName
+            - provider
             type: object
           status:
             description: ManagedZoneStatus defines the observed state of a Zone
