--- a/config/local-setup/controller/managed_zone.yaml
+++ b/config/local-setup/controller/managed_zone.yaml
@@ -6,3 +6,8 @@ spec:
   id: DUMMY_ID
   domainName: DUMMY_DOMAIN_NAME
   description: "Dev Managed Zone"
+  provider:
+    name: mgc-dns-provider
+    namespace: multi-cluster-gateways
+    type: DUMMY_PROVIDER_TYPE
+
